governance-shared/baselines/4.1.1/ChronoPM-Project/references/17-domain-glossary-rules.md
---
rule_id: 17
title: 领域术语词库规则
category: 辅助理解
risk_level: 低-中
depends_on: [01, 02, 05, 06, 10]
version: 1.0
---

# 17 领域术语词库规则

## 1. 定位与边界

### 1.1 定位

本规则定义 ChronoPM 的领域术语词库（Domain Glossary）能力，作为 AI 理解用户输入的预处理层。

- 词库是**辅助理解配置数据**，不是事实源
- 词库影响事实源更新前的理解，属于低到中风险配置数据
- 词库不直接产生项目管理决策
- 本次改造**不删除、不弱化现有能力**

### 1.2 边界

- 词库不修改事实源（todos/ 待办文件等）
- pending 不静默替换
- pending 不写入确定事实源
- 低置信度不更新事实源
- 原文必须保留
- 纠错不改写事实源
- 用户强制更新也需保留原文与确认记录
- 不新增机器配置字段（自动学习模式以规则策略描述）

### 1.3 "自动无感添加"定义

- "自动无感添加"指 AI 可自动将候选术语写入词库 pending 区，减少用户手动维护成本
- 不等于自动确认：自动发现默认进 pending，需用户确认后升为 confirmed
- "无感"指不需要用户手动打开词库文件添加，不是"完全不提示用户"
- 已确认允许 AI 自动写入 pending

### 1.4 拆解术语节流（v3.7.0）

拆解发现的术语：证据留 `facts.md`（kind=term），词库只收候选指针。每次拆解结束攒批一次确认，禁止逐条弹。入 pending 前对原词/标准词查重，命中只更新命中次数/最近命中。confirmed 仅对跨文档复用 ≥2 次或 PM 点名 SUGGEST。重拆不删词条；术语消失标 stale 保留可见。

## 2. 文件位置与作用域

### 2.1 路径

本项目词库路径为：`context/domain-glossary.md`

### 2.2 加载时机

- 按需加载：仅在需要术语归一化时读取
- 不存在时跳过：词库不存在时完全兼容现有流程

## 3. 词库数据结构

### 3.1 术语映射表

| 编号 | 原词 | 标准词 | 类别 | context_hint | 状态 | 来源 | 首次出现 | 最近命中 | 命中次数 | 备注 |
|------|------|--------|------|-------------|------|------|---------|---------|---------|------|

必填字段：编号、原词、标准词、类别、状态、来源、首次出现
可选字段：context_hint、最近命中、命中次数、备注

**类别字段说明**：类别为**自由文本**（非受控枚举），按项目实际使用。常见分类标签示例：主体类型、业务线、工作子项、人员角色、合规、来源类别；开发侧术语建议补充使用：**模块名、接口名、技术组件**（如"OrderSvc"="订单服务"、"RegFacade"="注册中心门面"），与业务术语复用同一套 pending→confirmed 状态机，支撑日报中开发实现表述的归一化（07 号 §8.10 双视图）。

### 3.2 纠错映射表

| 编号 | 错误写法 | 正确写法 | 类别 | 状态 | 来源 |
|------|---------|---------|------|------|------|

**v3.21.0 口径纠偏家：** 用户纠正「联调完成 ≠ 开发完成」这类理解，写入本表（confirmed）。`active-entities.json` 的 `term_corrections` 只是投影。禁止把口径只写进 JSON。`refresh_views.py` 会把本表投影回去。

### 3.3 待确认术语表

| 编号 | 术语 | 可能的标准名称 | 上下文 | 首次出现时间 | 状态 |
|------|------|--------------|--------|-------------|------|

"待确认术语表"与 pending 状态的关系：
- pending 条目（在术语映射表）：AI 已推断出候选标准词但未经用户确认
- 待确认术语表：无明确标准词或存在多个候选，等待用户选择
- 用户确认后，从待确认区迁移到术语映射表 confirmed

### 3.3a 范围表枚举（v3.27.0）

`registers/scope-register.md` 的「对象类型」「批次/窗口」列只能用本表 **confirmed** 词。模型遇未知值只能写「待裁定」，禁止把新词写成确认态。新枚举走词库流程（pending→确认）。项目可用别名把行业叫法映射到「对象类型」。

### 3.4 索引

- 按类别索引
- 按原词索引
- 索引项含文件路径（拆分后）

### 3.5 Change Log

| Date | Change Type | Description | Source |
|------|------------|-------------|--------|

### 3.6 编号规则

- 新编号：`G-{YYYYMMDD}-{HHmmss}`（秒级时间戳，生成时无需读词库求最大编号）。示例：`G-20260820-143025`
- 同秒冲突：若该秒已存在相同编号，追加两位序号（`-02`、`-03`…）
- **废除**「G + 三位数字 / 当前最大编号 + 1」
- 拆分后仍全局唯一
- 重复时提示冲突，不自动覆盖
- E + 三位数字（纠错映射表，独立编号；非 G 序列）
- P + 三位数字（待确认术语，确认后转 G 新号）
- **查询/指令双格式兼容**：存量旧号（G001、G003 等）保留不改不重编；「确认 G003」与「确认 G-20260820-143025」均可

## 4. 状态机

### 4.1 五状态定义

| 状态 | 含义 | 是否允许静默替换 |
|------|------|----------------|
| confirmed | 已确认术语 | 是 |
| pending | 自动候选，待确认 | 否 |
| rejected | 用户否定 | 否 |
| conflict | 存在多映射冲突 | 否 |
| deprecated | 已废弃/不再使用 | 否 |

### 4.2 状态流转

- pending → confirmed（用户确认）
- pending → rejected（用户否定）
- rejected → pending（用户恢复）
- confirmed → deprecated（用户废弃）
- deprecated → pending（用户恢复）
- 同一原词多映射 → conflict → 用户选择 → confirmed(选中) + deprecated(其余)

### 4.3 pending 使用规则（三层模型）

| 层面 | confirmed | pending | 低置信度/conflict |
|------|-----------|---------|------------------|
| 静默替换 | 允许 | 不允许 | 不允许 |
| 本轮候选理解 | 作为确定术语 | 可作为"候选理解"附带原文参与本轮分析，必须显式标注"按候选理解，待确认" | 只保留原文，不作为候选标准词 |
| 事实源更新 | 可正常更新 | 必须标注不确定，只写草稿，不进入正式事实源 | 不更新为确定事实，只进入待确认区 |
| 主体任务阻塞 | 不阻塞 | 不阻塞 | 不阻塞 |

> 草稿输出应体现在本轮回复或待确认更新清单中，不直接写入 `todos/{date}/{owner}.md` 待办文件、风险登记册等正式事实源文件。

## 5. 加载时机

### 5.1 触发场景

- 日报处理（01 规则前置）
- 评审记录处理（02 规则前置）
- 查询路由（05 规则前置）
- 更新触发（10 规则前置）
- 词库管理（用户主动触发）

### 5.1a 分类预筛与懒加载（性能优化）

词库规模增长后，为避免每次归一化全量扫读，采用两项策略：

1. **分类预筛**：日报/查询处理时，先判断输入所属领域（业务/技术/合规等）；词库已按类别拆分（§12.2，`domain-glossary-{category}.md`）时，**只加载对应类别的子文件**，不加载全部类别。
2. **懒加载**：仅当输入中出现疑似缩写/简称/未登记词模式（如英文缩写、中文简称、模块代号）时才触发词库归一化；纯长句、明确全称、无疑似缩写的输入直接跳过词库加载。

两项策略均复用现有拆分与按需加载机制，不新增额外索引文件。

### 5.2 降级规则

- **词库不存在**：
  - 普通业务流程中**不自动创建**词库文件
  - 跳过全部归一化步骤，按现有逻辑处理
  - 提示用户可执行迁移/初始化命令创建词库
  - 用户明确要求"初始化词库"，或执行 init/migrate 脚本时，允许创建
- **词库格式损坏**：提示异常，按现有逻辑处理

## 6. 术语归一化流程

### 6.1 九步流程

1. 读取 domain-glossary.md（如不存在，跳过全部步骤）
2. 先处理 confirmed 映射（静默替换，记录命中）
3. 再处理已确认纠错映射（自动纠正，保留原文记录）
4. 检测词库中未命中的新术语候选
5. 判断候选置信度
6. 按置信度处理：
   - 自动推断高 → **写入场景**（日报/会议/拆解）写入 pending，本轮按候选理解处理，显式标注。**简单查询/只读分析禁止写盘**，只标注「按候选理解」
   - 自动推断中 → 写入场景写入 pending，不替换，在输出中提示候选。查询轮不写盘
   - 低/多候选冲突 → 不写入正式映射，进入待确认区
7. 生成标准化输入（保留原文映射记录）
8. 将标准化输入送入原 Skill 流程
9. 输出保留原文片段 + 归一化结果 + 状态

### 6.2 归一化优先级

- confirmed 映射 > pending 映射
- 主体名称 > 业务线 > 工作子项 > 人员角色
- 多义冲突时不自动替换，一律进入 conflict 并追问

### 6.3 置信度判定条件

| 置信度 | 判定条件 | 动作 |
|--------|---------|------|
| confirmed 命中 | 原词在词库中存在，且状态为 confirmed | 静默替换，更新命中次数 |
| 用户明确声明 | 用户在当前轮给出原词↔标准词确认（T1 等价声明 / T2 追问确认，含责备式纠正） | 直接写入 confirmed，本轮替换 |
| 自动推断高 | 原词不在词库，但基于上下文可明确推断标准名 | 写入 pending，本轮按候选理解处理，显式标注"按候选理解，待确认" |
| 自动推断中 | 原词不在词库，存在合理候选但不确定 | 写入 pending，不替换，在输出中提示候选 |
| 低/多候选冲突 | 原词不在词库，无法判断标准名；或同一原词存在多个 confirmed 映射 | 不写入正式映射，进入待确认区，不阻塞主体任务 |

### 6.3a 开发侧术语归一（CR-20260815-001）

处理开发日报中的实现表述（模块名/接口名/类名/字段名）时，按本节规则归一：

- 开发侧术语（类别标签：模块名/接口名/技术组件）与业务术语共用本词库与同一套状态机；
- 日报中出现未登记的开发术语，按 §6.3 置信度判定进入 pending 或待确认区；
- 归一结果可用于 07 号 §8.10 双视图中"实现视图"字段的填充辅助与检索同义词扩展；
- 代码标识符（类名/方法名）本身作为标准词保留原样，不强制翻译为中文。

### 6.4 术语级归一 vs 句子级归一（RI 边界）(CR-20260813-001)

跨源需求归集（07 号 §8）涉及两种归一，**粒度不同、机制不同，不可混用**：

| 维度 | 术语级归一（本号现有） | 句子级归一（RI 新增场景） |
|------|------------------------|--------------------------|
| 对象 | 词 → 标准词（如"农专"="农民专业合作社"） | 一段条款/段落 → norm_text 标准表述 |
| 机制 | confirmed 映射静默替换 | LLM 语义改写生成 norm_text |
| 状态机 | 走本 §6 五状态（confirmed/pending/...） | **不入状态机**，置信度记录于 ATOM.confidence，由人工确认 |
| 使用位置 | 用于 ATOM `keywords` 字段标准化 + 检索同义词扩展 | 用于 ATOM `norm_text` + Canonical 归并匹配 |

**交汇点**：AI 生成 norm_text 时，可**查询**本词库做术语替换（如把"网络安全等级保护三级"统一为"等保三级"），但 norm_text 本身**不是**一个术语映射条目，不写入 domain-glossary。检索侧（05 号）查询前查词库扩展同义词，属于术语级归一的复用。

## 7. 纠错流程

### 7.1 三级策略

| 级别 | 条件 | 动作 |
|------|------|------|
| 已确认纠错 | 错误写法在词库纠错映射表中，状态为 confirmed | 自动纠正，保留原文记录 |
| 疑似错别字 | 不在词库，但基于上下文疑似错别字 | 仅输出纠正建议，不直接改写 |
| 影响业务含义 | 纠错可能改变任务名称/风险描述/需求含义 | 必须用户确认后才写入词库 |

## 8. 自动学习规则

### 8.1 自动发现

- AI 在处理用户输入时自动检测未命中的新术语
- 基于上下文推断标准名称
- **写入场景**（日报/会议/拆解/用户说记一下）自动写入 pending 状态，拆解仍攒批
- **查询轮模型不得手改本文件**。登记、纠正、补路径、加热度只经 `query-skill/scripts/query_locate.py`。第 1 表固定 7 列：编号、说法、登记名、路径、状态、来源、热度。类别、上下文、出现时间、最近命中、更新日、备注在第 1b 表，也是 7 列。禁止把这些列并成一张超过 7 列的表。范围登记枚举仍只用来源为 `词库` 且状态为 `confirmed` 的行。
- 推导过程、网页旁证不写词库 / journal / project-notes
- 用户说「把定位写进索引」→ 写本词库 alias（待确认），禁止手改 `wps/_index` / brain / json

### 8.2 学习模式（规则策略，非机器配置）

允许自动写入 pending 模式：AI 自动推断的新术语直接写入词库 pending 区，本轮按候选理解处理。

> 注：以上为规则策略描述，不新增 skill.json 配置字段。如需配置化，列为可选增强。

### 8.3 不自动写入的情况

- 低置信度/多候选冲突——进入待确认区

### 8.4 言语行为 T1–T4

| 类 | 触发 | 动作 | 状态 |
|---|---|---|---|
| T1 等价声明 | 「X 就是 Y」「X 指的是 Y」「X 是 Y 的简称/全称」；责备式纠正 | 同轮写入 | confirmed |
| T2 追问确认 | **仅当**本轮 AI 问过「X 是不是 Y」且该问是当前待回答的术语确认，PM 答「对/是/没错/就是这个/确认」 | 同轮写入；不要求「确认 G 号」 | confirmed |
| T3 重复未登记 | 同一原词本项目未入词库且出现 ≥2 次 | 写入 + SUGGEST | pending |
| T4 拿不准 | 日报/纪要出现疑似缩写且未命中 | 攒批一次问；PM 答后走 T2 | 问之前不写 confirmed |

T2：「对，这个待办今天完成」不含原词↔标准词 → 不触发。一句「对」可能答多问 → 走 §9.3，不写 confirmed。口头认错不落盘 = 违规。

## 9. 确认式学习规则

### 9.1 用户确认交互

| 指令 | 处理 |
|------|------|
| "确认 G003" | pending → confirmed，更新 Change Log 和索引 |
| 本轮术语追问后答「对/是/没错」 | 走 T2，不要求 G 号 |
| "修正 G003：XXX" | 更新标准词，状态改为 confirmed，更新 Change Log 和索引 |
| "否定 G003" | pending → rejected，不再自动建议，更新 Change Log |
| "恢复 G003" | rejected → pending，更新 Change Log |

### 9.2 待确认区选择

- 用户从候选列表中选择后创建 confirmed 条目（编号按 §3.6 生成 `G-{YYYYMMDD}-{HHmmss}`，不查最大编号）
- 更新 Change Log 和索引

### 9.3 模糊回复处理

| 用户回复 | 当前轮待确认项数量 | AI 处理方式 |
|---------|-----------------|------------|
| "确认" | 仅 1 个待确认项 | 默认确认该项 |
| "确认" | 多个待确认项 | 追问"请确认哪一项？如 G003 或 P001" |
| "就按第一个" | 有候选列表 | 对应当前最近候选列表的 A 选项 |
| "不是这个" | — | 不直接 rejected，追问"请说明正确的标准词或选择" |
| "改一下" | — | 追问"请提供修正后的标准词" |
| 无法理解 | — | 追问"请回复：确认 G编号 / 修正 G编号：标准词 / 否定 G编号" |

## 10. 去重规则

| 层级 | 判断方式 | 动作 |
|------|---------|------|
| 第一层 | 原词完全相同 | 阻止重复添加 |
| 第二层 | 标准名完全相同 | 提示已存在相同标准名映射 |
| 第三层 | 同一原词不同标准名 | 标记 conflict 状态，提示用户选择 |
| 第四层 | 疑似相似（同音/形近/编辑距离小） | 仅提示候选，不自动合并 |

## 11. 索引维护规则

### 11.1 权威性声明

- 词条表是权威数据
- 索引是派生数据

### 11.2 更新时机

新增、修改、确认、拒绝、拆分后同步更新索引。

### 11.3 更新责任

| 责任方 | 职责 |
|--------|------|
| AI 修改词库时 | 必须同步维护索引 |
| 用户手工修改词库后 | AI 检测不一致并提示重建 |
| 无法可靠维护时 | 优先维护词条表，标记索引为"过期" |

### 11.4 索引降级策略

| 词库规模/状态 | 处理方式 |
|-------------|---------|
| 未拆分且低于阈值（200条/300行） | 索引缺失时回退扫描词条表，提示重建索引 |
| 未拆分但超过阈值 | 提示性能影响，建议先重建索引，可执行降级扫描但需提示 |
| 已拆分且主索引缺失 | 若无法定位子文件，提示修复索引；可按文件规则尝试扫描已知子文件 |
| 索引与词条冲突 | 以词条表为准，提示重建索引 |

## 12. 扩容与拆分规则

### 12.1 阈值

- 默认 200 条记录或 300 行
- 可在本规则文件中调整

### 12.2 拆分规则

- 超过阈值时仅建议拆分
- 拆分需用户确认或由维护脚本执行
- 拆分后主文件保留索引
- 子文件命名：`domain-glossary-{category}.md`
- 拆分后索引项包含文件路径
- 拆分后编号仍全局唯一

## 13. 输出格式

### 13.1 归一化记录

- 仅当发生 confirmed 命中替换、pending 自动添加、待确认问题、纠错命中时输出
- **无变化时不输出**（硬规则）
- 必须保留原文片段

### 13.2 词库更新提示

- pending 自动添加时提示用户确认/修正/否定
- 待确认术语提供候选选项

## 14. 异常处理

| 异常场景 | 处理方式 |
|---------|---------|
| 词库文件不存在（普通业务流程） | 不自动创建；跳过归一化，按现有逻辑处理；提示用户可执行迁移/初始化命令 |
| 词库文件为空 | 同上 |
| 词库格式损坏 | 提示"词库格式异常，建议检查"，按现有逻辑处理 |
| 同一原词多映射（conflict） | 标记冲突，提示用户选择，不自动替换 |
| 自动添加被否定 | 状态改为 rejected，不再自动建议，除非用户恢复 |
| 词库超过 200 条 | 建议拆分，不自动拆分 |
| 索引与词条表不一致 | 以词条表为准，提示重建索引 |
| 编号重复 | 提示编号冲突，建议修正，不自动覆盖 |
| 索引缺失（小词库，未超阈值） | 回退扫描词条表，提示重建索引 |
| 索引缺失（大词库，超阈值） | 提示性能影响，建议先重建，可执行降级扫描但需提示 |
| 拆分文件缺失 | 按可定位文件降级处理，无法定位时提示修复索引 |
| 用户确认结果与已有条目冲突 | 标记 conflict，提示用户选择 |
| 新术语无法推断 | 不自动添加，在输出中标注"未识别术语：XX" |
| 旧项目无词库模板 | `migrate_workspace.py --create-glossary` 创建；检测旧术语文件并提示是否导入（不自动导入） |

## 15. 风险提示（非强保障）

- 词库文件并发修改/多人同时编辑冲突：通过 Change Log 时间戳检测提示，但不作为强保障能力
- 自动写入 pending 的授权风险：已确认允许写入，pending 不会静默替换

## 16. 禁止事项

- pending 条目不得静默替换
- 低置信度不得阻塞主体任务
- pending/低置信度不得写入确定事实源
- 不得只输出归一化结果而不保留原文
- 不得自动拆分词库文件
- 不得将待确认问题的推荐默认值视为已确认事实
- 不得删除或弱化现有 Skill 能力
- 不得新增机器配置字段
- 无变化时不得输出归一化记录
- 多义词不得自动替换，必须进入 conflict 追问

## 17. 词库文件规范

### 17.1 文件规格

- 文件类型：领域术语词库，doc_type: domain-glossary
- 存储路径：本项目 `context/domain-glossary.md`
- 文件格式：Markdown，含 YAML front matter
- 依赖规则：本文件（17-domain-glossary-rules.md）+ 06-file-rules.md
- 不存在时：降级运行，不影响现有流程

### 17.2 词库文件创建边界

- 普通业务处理不得为「随便建个空库」而静默创建
- **首次感应（T1～T4 任一，或 00 P-ALWAYS 命中可落盘细节）若文件不存在 → 必须先按模板创建再写入**，并告知「已建词库」。不等用户说「初始化词库」
- 仍允许：init `--glossary`、migrate `--create-glossary`、用户明确要求初始化
- 创建前必须检查目标路径是否存在
- 已存在时**不得覆盖**
- 创建后记录 Change Log 或迁移日志

### 17.3 拆分规则（衔接 06）

- 超过 200 条记录或 300 行时：建议拆分，不自动拆分
- 拆分后子文件命名：`domain-glossary-{category}.md`
- 拆分后主文件保留索引，子文件索引项含文件路径

